primeras modificaciones al cv(parte1)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <!-- link de CSS-->
     <link rel="stylesheet" href="estilos.css">
     <!--link para los iconos de font awesome-->
-    <link rel="stylesheet" href="https://kit.fontawesome.com/bc1a01dde7.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/bc1a01dde7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!--Fuente de letra de Google Fonts-->
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 <main class="resumen">
@@ -21,15 +25,15 @@
             </div>
             <div class="informacion-de-contacto">
                   <h3>Información de contacto</h3>
-                  <ul>
-                        <li><i class="fa-sharp fa-solid fa-phone-rotary"></i>+54 011 4278-3367</li>
+                  <ul class="lista1">
+                        <li><i class="fa-solid fa-phone-volume"></i>></i>+54 011 4278-3367</li>
                         <li><i class="fa-brands fa-whatsapp"></i>+54 11 6282-4657</li>
                         <li><i class="fa-solid fa-at"></i>example@yahoo.com.ar</li>
                   </ul>
             </div>
             <div class="conocimientos">
                   <h3>Estudios y conocimientos</h3>
-                  <ul>
+                  <ul class="lista2">
                         <li>Reparación intagral de computadoras</li>
                         <li>Conocimiento de redes y cybercafé</li>
                         <li>HTML, CSS Y javaScript</li>
@@ -39,17 +43,24 @@
 
             <div class="referencias">
                   <h3>Referencias</h3>
-                  <ul>
+                  <ul class="lista3">
                         <li>
-                           <i class="fa-solid fa-building">Microsoft S.A.</i>
-                           <i class="fa-solid fa-phone-volume">+456825354</i>
+                           <i class="fa-solid fa-building"> Microsoft S.A.</i>
+                           <i class="fa-solid fa-phone-volume"> +456825354</i>
                         </li>
                         <li>
-                              <i class="fa-solid fa-building">Google S.R.L,</i>
-                              <i class="fa-solid fa-phone-volume">+4571625354</i> 
+                              <i class="fa-solid fa-building"> Google S.R.L,</i>
+                              <i class="fa-solid fa-phone-volume"> +4571625354</i> 
                         </li>
                   </ul>
             </div>
+            <footer class="redes"> 
+                  <p>Redes Sociales:
+                  <i class="fa-brands fa-facebook"><a href="https://www.facebook.com/" target="_blank"></i> Oscar Martinez</a>/
+                  <i class="fa-brands fa-twitter"></i><a href="https://www.twitter.com" target="_blank"> @oscarmartinez</a>/
+                  <i class="fa-brands fa-linkedin"></i><a href="https://ar.linkedin.com/" target="_blank"> Oscar Martinez </a>
+            </p>
+
        </section>
 
        <section class="contenido-derecho">
