--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </li>
                   </ul>
             </div>
-            <footer class="redes"> 
+            <footer class="redes-sociales"> 
                   <p><br>Redes Sociales:</br>
                   <i class="fa-brands fa-facebook"><a href="https://www.facebook.com/" target="_blank"></i> Oscar Martinez</a>/
                   <i class="fa-brands fa-twitter"></i><a href="https://www.twitter.com" target="_blank"> @oscarmartinez</a>/
